--- a/blogPessoal/src/app/rodape/rodape.component.html
+++ b/blogPessoal/src/app/rodape/rodape.component.html
@@ -1,1 +1,48 @@
-<p>rodape works!</p>
+<footer class="page-footer font-small bg-secondary pt-4">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12 d-flex justify-content-center">
+        <h4 class="text-white">Redes sociais</h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12 d-flex justify-content-center">
+        <ul class="social-network">
+          <li>
+            <a
+              href="https://www.facebook.com/AllenVieira96"
+              target="_blank"
+              class="icoFacebook"
+              ><i class="fab fa-facebook" aria-hidden="true"></i
+            ></a>
+          </li>
+          <li>
+            <a
+              href="https://www.instagram.com/allenv96/"
+              target="_blank"
+              class="icoInstagram"
+              ><i class="fab fa-instagram" aria-hidden="true"></i
+            ></a>
+          </li>
+          <li>
+            <a
+              href="https://www.linkedin.com/in/allen-vieira/"
+              target="_blank"
+              class="icoLinkedin"
+              ><i class="fab fa-linkedin-in" aria-hidden="true"></i
+            ></a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div class="footer-copyright bg-dark text-center py-3">
+    <span class="text-light">© 2021 Todos os direitos reservados: </span>
+    <a
+      target="_blank"
+      href="https://www.linkedin.com/in/allen-vieira/"
+      class="text-light"
+      >Allen de Lima Vieira</a
+    >
+  </div>
+</footer>
