--- a/blogPessoal/src/app/cadastro/cadastro.component.css
+++ b/blogPessoal/src/app/cadastro/cadastro.component.css
@@ -1,6 +1,6 @@
 #img-bg {
   background-image: url("../../assets/img/bgCadastro.jpg");
-  min-height: 695px;
+  min-height: 100vh;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
