--- a/blogPessoal/src/app/cadastro/cadastro.component.html
+++ b/blogPessoal/src/app/cadastro/cadastro.component.html
@@ -64,7 +64,13 @@
             </select>
           </div>
           <div class="d-flex justify-content-center">
-            <button type="submit" class="btn btn-danger mr-4">Cancelar</button>
+            <button
+              type="submit"
+              class="btn btn-danger mr-4"
+              routerLink="/login"
+            >
+              Cancelar
+            </button>
             <button type="submit" class="btn btn-success">Cadastrar</button>
           </div>
         </div>
