--- a/blogPessoal/src/app/login/login.component.html
+++ b/blogPessoal/src/app/login/login.component.html
@@ -29,7 +29,7 @@
           </div>
           <hr class="mt-5 mb-5" />
           <p class="text-center">
-            Não tem registro? <a href="#">Cadastre-se</a>
+            Não tem registro? <a routerLink="/cadastro">Cadastre-se</a>
           </p>
         </div>
       </div>
