--- a/blogPessoal/src/app/login/login.component.html
+++ b/blogPessoal/src/app/login/login.component.html
@@ -7,6 +7,7 @@
           <div class="form-group">
             <label for="usuario">Usuário</label>
             <input
+              [(ngModel)]="userLogin.usuario"
               class="form-control"
               type="text"
               name="usuario"
@@ -17,6 +18,7 @@
           <div class="form-group">
             <label for="senha">Senha</label>
             <input
+              [(ngModel)]="userLogin.senha"
               class="form-control"
               type="password"
               name="senha"
@@ -25,7 +27,9 @@
             />
           </div>
           <div class="d-flex justify-content-center">
-            <button type="submit" class="btn btn-success">Login</button>
+            <button type="submit" class="btn btn-success" (click)="entrar()">
+              Login
+            </button>
           </div>
           <hr class="mt-5 mb-5" />
           <p class="text-center">
