--- a/blogPessoal/src/app/menu/menu.component.html
+++ b/blogPessoal/src/app/menu/menu.component.html
@@ -15,15 +15,13 @@
       <ul class="navbar-nav mr-auto d-flex align-items-center">
         <li class="nav-item">
           <img
-            src="../../assets/img/profile.jpg"
+            src="{{foto}}"
             alt="Foto de perfil"
-            width="50px"
-            height="50px"
             class="img-fluid rounded-circle"
           />
         </li>
         <li class="nav-item pl-3">
-          <p class="m-0 font-weight-bold text-white fs-16">Nome do usuário</p>
+          <p class="m-0 font-weight-bold text-white fs-16">{{nome}}</p>
         </li>
         <li class="nav-item pl-3">
           <a href="#"
@@ -34,7 +32,7 @@
       </ul>
       <ul class="navbar-nav ml-auto d-flex align-items-center">
         <li class="nav-item pl-3">
-          <a class="m-0 font-weight-bold text-white fs-16"
+          <a (click)='sair()' class="m-0 font-weight-bold text-white fs-16"
             >Sair <i class="fas fa-sign-out-alt"></i
           ></a>
         </li>
