--- a/blogPessoal/src/app/inicio/inicio.component.html
+++ b/blogPessoal/src/app/inicio/inicio.component.html
@@ -47,6 +47,7 @@
     >
 
     <a
+      (click)="findByIdUser()"
       class="nav-item nav-link text-secondary font-weight-bold nav-link"
       id="nav-minhasPostagens-tab"
       data-toggle="tab"
@@ -67,14 +68,33 @@
       >Postagens por tema</a
     >
   </div>
-  <div class="tab-content" id="myTabContent">
+  <div class="tab-content mt-5" id="myTabContent">
     <div
       class="tab-pane fade show active"
       id="todasPostagens"
       role="tabpanel"
       aria-labelledby="nav-todasPostagens-tab"
     >
-      Todas as postagens
+      <div class="card-columns">
+        <div class="card text-center" *ngFor="let item of listaPostagem">
+          <div class="card-body">
+            <h5 class="card-title m-0">{{ item.titulo }}</h5>
+            <small class="text-muted">Tema: {{ item.tema.descricao }}</small>
+            <p class="card-text mt-3">
+              {{ item.texto }}
+            </p>
+            <p class="card-text">
+              <small class="text-muted"
+                >{{ item.data | date: "dd/MM/yyyy" }} às
+                {{ item.data | date: "HH:mm" }}</small
+              >
+            </p>
+            <p class="card-text">
+              <small class="text-muted">{{ item.usuario.nome }}</small>
+            </p>
+          </div>
+        </div>
+      </div>
     </div>
     <div
       class="tab-pane fade"
@@ -82,7 +102,23 @@
       role="tabpanel"
       aria-labelledby="nav-minhasPostagens-tab"
     >
-      Minhas postagens
+      <div class="card-columns">
+        <div class="card text-center" *ngFor="let item of user.postagem">
+          <div class="card-body">
+            <h5 class="card-title m-0">{{ item.titulo }}</h5>
+            <small class="text-muted">Tema: {{ item.tema.descricao }}</small>
+            <p class="card-text mt-3">
+              {{ item.texto }}
+            </p>
+            <p class="card-text">
+              <small class="text-muted"
+                >{{ item.data | date: "dd/MM/yyyy" }} às
+                {{ item.data | date: "HH:mm" }}</small
+              >
+            </p>
+          </div>
+        </div>
+      </div>
     </div>
     <div
       class="tab-pane fade"
@@ -90,7 +126,25 @@
       role="tabpanel"
       aria-labelledby="nav-postagemTema-tab"
     >
-      Postagens por tema
+      <div class="card-columns" *ngFor="let tema of listaTemas">
+        <div class="card text-center" *ngFor="let item of tema.postagem">
+          <div class="card-body">
+            <h5 class="card-title m-0">{{ item.titulo }}</h5>
+            <p class="card-text mt-3">
+              {{ item.texto }}
+            </p>
+            <p class="card-text">
+              <small class="text-muted"
+                >{{ item.data | date: "dd/MM/yyyy" }} às
+                {{ item.data | date: "HH:mm" }}</small
+              >
+            </p>
+            <p class="card-text">
+              <small class="text-muted">{{ item.usuario.nome }}</small>
+            </p>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </div>
@@ -121,6 +175,7 @@
         <div class="form-group">
           <label for="titulo">Título</label>
           <input
+            [(ngModel)]="postagem.titulo"
             type="text"
             class="form-control"
             id="titulo"
@@ -128,8 +183,9 @@
           />
         </div>
         <div class="form-group">
-          <label for="titulo">Texto</label>
+          <label for="texto">Texto</label>
           <textarea
+            [(ngModel)]="postagem.texto"
             class="form-control"
             name="texto"
             id="texto"
@@ -142,8 +198,16 @@
             <a data-dismiss="modal" routerLink="/tema">cadastre um novo</a
             >:</label
           >
-          <select class="form-control" name="tema" id="tema">
-            <option value="">Temas</option>
+          <select
+            class="form-control"
+            name="tema"
+            id="tema"
+            [(ngModel)]="idTema"
+            (change)="findByIdTema()"
+          >
+            <option *ngFor="let item of listaTemas" value="{{ item.id }}">
+              {{ item.descricao }}
+            </option>
           </select>
         </div>
       </div>
@@ -151,7 +215,14 @@
         <button type="button" class="btn btn-danger" data-dismiss="modal">
           Cancelar
         </button>
-        <button type="button" class="btn btn-success">Publicar</button>
+        <button
+          type="button"
+          class="btn btn-success"
+          (click)="publicar()"
+          data-dismiss="modal"
+        >
+          Publicar
+        </button>
       </div>
     </div>
   </div>
